--- a/templates/card3.html
+++ b/templates/card3.html
@@ -78,7 +78,7 @@
         <div class="container d-flex flex-row justify-content-center mb-2">
             <small class="text-center">
                 <h6>© Девман2022. Все права защищены. © Devman2022. All right reserved.</h6>
-                <a href="#" class="link-secondary">Политика конфиденциальности</a>
+                <a href="{% static 'docs/privacy_policy.pdf' %}" class="link-secondary">Политика конфиденциальности</a>
             </small>
         </div>
     </footer>
