--- a/templates/lk.html
+++ b/templates/lk.html
@@ -149,7 +149,7 @@
     <footer class="footer pt-2" style="border-top: 1px solid lightgray;">
         <div class="container d-flex flex-row justify-content-center mb-2">
             <small class="text-center">
-                <h6>© Девман2022. Все права защищены. © Devman2022. All right reserved.</h6><a href="#"
+                <h6>© Девман2022. Все права защищены. © Devman2022. All right reserved.</h6><a href="{% static 'docs/privacy_policy.pdf' %}"
                     class="link-secondary">Политика конфиденциальности</a>
             </small>
         </div>
