--- a/templates/card2.html
+++ b/templates/card2.html
@@ -18,7 +18,9 @@
                 <a class="navbar-brand" href="{% url 'home' %}">
                     <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
                 </a>
+                <form action="{% url 'home' %}">
                 <button class="btn btn-outline-success me-2 shadow-none foodplan_green foodplan__border_green">Назад</button>
+                    </form>
             </div>
         </nav>
     </header>
@@ -62,7 +64,7 @@
     <footer>
         <nav class="navbar navbar-expand-md navbar-light mt-5">
             <div class="container p-2">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{% url 'home' %}">
                     <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
                 </a>
                 <div class="footer__sideBtns d-flex">
@@ -77,7 +79,7 @@
         <div class="container d-flex flex-row justify-content-center mb-2">
             <small class="text-center">
                 <h6>© Девман2022. Все права защищены. © Devman2022. All right reserved.</h6>
-                <a href="#" class="link-secondary">Политика конфиденциальности</a>
+                <a href="{% static 'docs/privacy_policy.pdf' %}" class="link-secondary">Политика конфиденциальности</a>
             </small>
         </div>
     </footer>
