--- a/templates/index.html
+++ b/templates/index.html
@@ -241,13 +241,13 @@
                 <img src="{% static 'img/vk.png' %}" height="40" width="auto" alt="">
             </a>
             <div>
-                <a href="#" class="link-dark mx-1" style="text-decoration: none;"><b>Виды меню</b></a>
+                <a href="{% url 'detail-recipe' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Виды меню</b></a>
                 <a href="#" class="link-dark mx-1" style="text-decoration: none;"><b>Блог</b></a>
                 <a href="#" class="link-dark mx-1" style="text-decoration: none;"><b>Контакты</b></a>
             </div>
         </div>
         <div class="container">
-            <h6 class="link-secondary text-center"><a href="#" class="link-secondary me-2">Политика конфиденциальности</a><a href="#" class="link-secondary">Пользовательское соглашение</a></h6>
+            <h6 class="link-secondary text-center"><a href="{% static 'docs/privacy_policy.pdf' %}" class="link-secondary me-2">Политика конфиденциальности</a><a href="#" class="link-secondary">Пользовательское соглашение</a></h6>
             <h6 class="link-secondary text-center">© Devman 2022. All right reserved.</h6>
         </div>
     </footer>
