--- a/templates/auth.html
+++ b/templates/auth.html
@@ -49,29 +49,31 @@
                     <h2 class="text-center"><strong>Авторизация</strong></h2>
                 </div>
                 <div class="card px-5 py-3 d-flex align-items-center foodplan__shadow">
-                    <form action="{% url 'lk' %}">
-                        <h1 class="mb-4 text-center"><strong>Вход</strong></h1>
+                   <form action="{% url 'user:login' %}" method="post">
+                    {% csrf_token %}
+
+                    <h1 class="mb-4 text-center"><strong>Вход</strong></h1>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            <label for="{{ form.username.id_for_label}}" class="form-label">Логин</label>
+                            {{ form.username}}
                         </div>
                         <div class="mb-3">
                             <div class="d-flex align-items-center justify-content-between">
-                                <label for="exampleInputPassword1" class="form-label">Пароль</label>
-                                <small><a href="{% url 'registration' %}" class="link-dark foodplan_green">Забыли пароль?</a></small>
+                                <label for="{{ form.password.id_for_label}}" class="form-label">Пароль</label>
+                                <small><a href="#" class="link-dark foodplan_green">Забыли пароль?</a></small>
                             </div>
-                            <input type="password" class="form-control" id="password">
+                            {{form.password}}
                         </div>
                         <div class="row mb-3">
                             <div class="col-12 col-sm-6 mt-3">
                                 <button type="submit"
                                     class="btn w-100 btn-outline-success shadow-none foodplan_green foodplan__border_green">Войти</button>
                             </div>
-                            <div class="col-12 col-sm-6 mt-3 d-flex justify-content-center align-items-center">
-                                <small>Нет аккаунта? <a href="{% url 'registration' %}" class="link-dark foodplan_green">Зарегистрируйтесь</a></small>
-                            </div>
+                             <div class="col-12 col-sm-6 mt-3 d-flex justify-content-center align-items-center">
+                            <small>Нет аккаунта? <a href="{% url 'user:registration' %}" class="link-dark foodplan_green">Зарегистрируйтесь</a></small>
                         </div>
-                    </form>
+                        </div>
+                </form>
                 </div>
             </div>
         </section>
