--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 <a class="navbar-brand" href="{% url 'home' %}">
                     <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
                 </a>
-                <form action="{% url 'login' %}">
+                <form action="{% url 'user:login' %}">
                 <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Войти</button>
                 </form>
             </div>
