--- a/templates/registration.html
+++ b/templates/registration.html
@@ -54,6 +54,10 @@
 
                         <h1 class="mb-4 text-center"><strong>Регистрация</strong></h1>
                         <div class="mb-3">
+                            <label for="{{ form.first_name.id_for_label}}" class="form-label">Имя</label>
+                            {{ form.first_name}}
+                        </div>
+                        <div class="mb-3">
                             <label for="{{ form.username.id_for_label}}" class="form-label">Логин</label>
                             {{ form.username}}
                         </div>
