--- a/templates/registration.html
+++ b/templates/registration.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Foodplan 2021 - Меню на неделю FOODPLAN</title>
 </head>
 
@@ -25,7 +25,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse1">
                     <ul class="navbar-nav w-100">
-                        
+
                         <li class="nav-item align-items-center d-md-flex flex-grow-1 justify-content-end">
                             <button class="btn shadow-none btn-outline-success me-2 foodplan_green foodplan__border_green">Подписка</button>
                             <button class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Войти</button>
@@ -39,20 +39,25 @@
         <section>
             <div class="container">
                 <div class="card p-3 mb-5 foodplan__shadow">
-                    <a href="#" class="link-secondary fw-light foodplan__backButton">
+                    <a href="{% url 'user:login' %}" class="link-secondary fw-light foodplan__backButton">
                         <svg xmlns="http://www.w3.org/2000/svg" width="9%" height="9%" fill="currentColor" class="bi bi-arrow-left-circle"
                             viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
                                 d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
                         </svg>
                     </a>
-                    <h2 class="text-center"><strong>Авторизация</strong></h2>
+                    <h2 class="text-center"><strong>Регистрация </strong></h2>
                 </div>
+                {% if form.errors %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                     style="margin-top: 50px;">
+                    {{ form.errors }}                </div>
+                {% endif %}
                 <div class="card px-5 py-3 d-flex align-items-center foodplan__shadow">
                     <form action = "{% url 'user:registration' %}" method="post">
                         {% csrf_token %}
 
-                        <h1 class="mb-4 text-center"><strong>Регистрация</strong></h1>
+                        <h1 class="mb-4 text-center"><strong>Введите данные</strong></h1>
                         <div class="mb-3">
                             <label for="{{ form.first_name.id_for_label}}" class="form-label">Имя</label>
                             {{ form.first_name}}
