--- a/templates/registration.html
+++ b/templates/registration.html
@@ -63,6 +63,10 @@
                             {{ form.first_name}}
                         </div>
                         <div class="mb-3">
+                            <label for="{{ form.last_name.id_for_label}}" class="form-label">Фамилия</label>
+                            {{ form.last_name}}
+                        </div>
+                        <div class="mb-3">
                             <label for="{{ form.username.id_for_label}}" class="form-label">Логин</label>
                             {{ form.username}}
                         </div>
