--- a/templates/lk.html
+++ b/templates/lk.html
@@ -18,7 +18,9 @@
                 <a class="navbar-brand" href="{% url 'home' %}">
                     <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
                 </a>
-                <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">Выйти</button>
+                <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">
+                    <a href="{% url 'logout' %}" class="link-dark text-decoration-none align-middle">Выйти</a>
+                </button>
             </div>
         </nav>
     </header>
@@ -45,7 +47,9 @@
                             </span>
                         </h3>
                         <div class="d-block">
-                            <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">Выйти</button>
+                            <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">
+                                <a href="{% url 'logout' %}" class="link-dark text-decoration-none align-middle">Выйти</a>
+                            </button>
                         </div>
                     </div>
 
