--- a/templates/index_sign.html
+++ b/templates/index_sign.html
@@ -244,7 +244,7 @@
             <div>
                 <a href="{% url 'detail-recipe' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Виды меню</b></a>
                 <a href="#" class="link-dark mx-1" style="text-decoration: none;"><b>Блог</b></a>
-                <a href="#" class="link-dark mx-1" style="text-decoration: none;"><b>Контакты</b></a>
+                <a href="{% url 'contacts' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Контакты</b></a>
             </div>
         </div>
         <div class="container">
