--- a/templates/card1.html
+++ b/templates/card1.html
@@ -53,7 +53,7 @@
                     <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}img/logo.8d8f24edbb5f.svg" height="55" width="189" alt="">
                 </a>
                 <div class="footer__sideBtns d-flex">
-                    <a href="#">
+                    <a href="https://vk.com/devmanorg">
                         <img src="{% static 'img/vk.png' %}" height="38" width="auto" alt="">
                     </a>
                 </div>
