--- a/templates/lk.html
+++ b/templates/lk.html
@@ -38,8 +38,7 @@
                     <div class="card col-12 col-md-2 p-3 mb-3 d-flex flex-column align-items-center foodplan__shadow">
                         <div class="position-relative">
                             <img src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'img/avatar.jpg' %} {% endif %}" alt="" width="100" height="100" class="rounded-pill">
-                            <span class="badge rounded-circle position-absolute bottom-0 end-0 foodplan__bg_green avatar__plus"><a href="#"
-                                    class="link-dark text-decoration-none align-middle">+</a></span>
+
                         </div>
                         <h3 class="card-title text-center">
                             <span>
@@ -65,7 +64,7 @@
                             </ul>
                             <div class="tab-content mt-2">
                                 <div class="tab-pane fade show active" id="data">
-                                    <form action="{% url 'user:lk' %}" method="post">
+                                    <form action="{% url 'user:lk' %}" method="post" enctype="multipart/form-data">
 
                                         {% csrf_token%}
                                         <div class="mb-3">
@@ -84,11 +83,16 @@
                                             <label for="{{ form.email.id_for_label}}" class="form-label">Email</label>
                                             {{ form.email}}
                                         </div>
-
+                                        <div class="mb-3">
+                                            <label for="{{ form.image.id_for_label}}" class="custom-file">Фото профиля</label>
+                                            {{ form.image }}
+                                        </div>
+                                        
                                         <div class="d-block">
                                             <button type="submit" class="btn shadow-none btn-outline-success foodplan_green foodplan__border_green">Сохранить
                                                 изменения</button>
                                         </div>
+
                                     </form>
                                 </div>
                                 <div class="tab-pane fade" id="menu">
@@ -142,7 +146,7 @@
                     <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
                 </a>
                 <div class="footer__sideBtns d-flex">
-                    <a href="#">
+                    <a href="https://vk.com/devmanorg">
                         <img src="{% static 'img/vk.png' %}" height="38" width="auto" alt="">
                     </a>
                 </div>
