add recipe view

--- a/templates/index.html
+++ b/templates/index.html
@@ -242,7 +242,7 @@
                 <img src="{% static 'img/vk.png' %}" height="40" width="auto" alt="">
             </a>
             <div>
-                <a href="{% url 'detail-recipe' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Виды меню</b></a>
+                <a href="{% url 'user:registration' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Виды меню</b></a>
                 <a href="#" class="link-dark mx-1" style="text-decoration: none;"><b>Блог</b></a>
                 <a href="{% url 'contacts' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Контакты</b></a>
             </div>
