--- a/templates/lk.html
+++ b/templates/lk.html
@@ -103,7 +103,8 @@
                                         <div class="col-10 col-md-10">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <h2>Название подписки</h2>
+                                                    {% for sub in subscription %}
+                                                    <h2>{{  sub.get_diet_display }}</h2>
                                                 </div>
                                                 <div class="col-md-12 col-lg-9">
                                                     <h6>Описание подписки Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius saepe ea nobis necessitatibus
@@ -115,18 +116,18 @@
                                                 </div>
                                                 <div class="col-md-12 col-lg-3 text-muted d-flex flex-column justify-content-between">
                                                     <div class="d-flex flex-row justify-content-between">
-                                                        <small>Персоны: </small><small>3</small>
+                                                        <small>Персоны: </small><small>{{ sub.people_number }}</small>
                                                     </div>
                                                     <div class="d-flex flex-row justify-content-between">
-                                                        <small>Аллергии: </small><small>нет</small>
+                                                        <small>Аллергии: </small><small> {% if sub.fish %} Да {% elif sub.meat %} Да {% elif sub.wheat %} Да {% elif sub.honey %} Да {% elif sub.dairy %} Да {% elif sub.nuts %} Да {% else %} Нет  </small> {% endif %}
                                                     </div>
                                                     <div class="d-flex flex-row justify-content-between">
-                                                        <small>Калории: </small><small>1400</small>
+                                                        <small>Калории: </small><small>{{ meal }}</small>
                                                     </div>
                                                     <div class="d-flex flex-row justify-content-between">
-                                                        <small>Кол-во приёмов пищи: </small><small>4</small>
+                                                        <small>Кол-во приёмов пищи: </small><small>{{ meal }}</small>
                                                     </div>
-                                                    
+                                                    {% endfor %}
                                                 </div>
                                             </div>
                                         </div>
