--- a/templates/index_sign.html
+++ b/templates/index_sign.html
@@ -243,7 +243,7 @@
             </a>
             <div>
                 <a href="{% url 'user:lk' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Виды меню</b></a>
-                <a href="#" class="link-dark mx-1" style="text-decoration: none;"><b>Блог</b></a>
+                <a href="{% url 'blog' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Блог</b></a>
                 <a href="{% url 'contacts' %}" class="link-dark mx-1" style="text-decoration: none;"><b>Контакты</b></a>
             </div>
         </div>
