--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,48 +8,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <title>План питания на неделю, меню, рецепты, список покупок. Классическое меню, безуглеводное меню</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>Личный кабинет</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top navbar__opacity">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'home' %}">
-                    <img src="{% static '/img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
+                    <img src="{% static 'img/logo.8d8f24edbb5f.svg' %}" height="55" width="189" alt="">
                 </a>
-                <button class="btn btn-outline-success me-2 shadow-none foodplan_green foodplan__border_green">Назад</button>
+
             </div>
         </nav>
     </header>
-    <main style="margin-top: calc(2rem + 75px);">
-
+    <main style="margin-top: calc(2rem + 85px);">
         <section>
-
             <div class="container">
+                <div class="card p-3 mb-5 foodplan__shadow">
+                    <a href="{% url 'home' %}" class="link-secondary fw-light foodplan__backButton">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="9%" height="9%" fill="currentColor" class="bi bi-arrow-left-circle"
+                            viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
+                        </svg>
+                    </a>
+                    <h2 class="text-center"><strong>Наши рецепты</strong></h2>
+                </div>
+            </div>
+                    <div class="container">
+                <div class="card p-3 mb-5 foodplan__shadow">
+                    <ul class="list-unstyled">
+                        {% for recipe in first_three_recipes %}
+                            <li class="d-flex flex-column align-items-center mb-4">
 
-               <div class="row">
-                    <div class="col-12 col-md-4 d-flex justify-content-center">
-                        <div class="card foodplan__card_borderless">
-                            <img src="{% if recipe.image %}{{ recipe.image.url }}{% else %}{% static 'img/circle1.png' %}{% endif %}" alt="{{ recipe.name }}" width="300" height="200">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 d-flex flex-column justify-content-between">
-                        <h2>{{ recipe.name }}</h2>
-                        <ul class="list-group list-group-flush">
-                            {% for recipe_ingredient in recipe.recipeingredient_set.all %}
-                                <li class="list-group-item">{{ recipe_ingredient.ingredient.name }} ({{ recipe_ingredient.amount }}г.)</li>
-                            {% endfor %}
-                        </ul>
-                        <h6>Общая калорийность: {{ recipe.total_calories }} ккал</h6>
-                        <p>Описание рецепта</p>
-                        <p>{{ recipe.description }}</p>
-                    </div>
+                                    <h3 class="text-center">{{ recipe.name }}</h3>
+                                <a href="{% url 'card1' recipe.id %}">
+                                    <img src="{{ recipe.image.url}}" alt="{{ recipe.name }}"
+                                        class="img-fluid" width="300" height="200">
+                                    </a>
+                                    <p>Описание рецепта</p>
+                                    <p>{{ recipe.description }}</p>
+                            </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </section>
     </main>
-     <footer>
+    <footer>
         <nav class="navbar navbar-expand-md navbar-light mt-5">
             <div class="container p-2">
                 <a class="navbar-brand" href="#">
