--- a/templates/index.html
+++ b/templates/index.html
@@ -248,7 +248,7 @@
             </div>
         </div>
         <div class="container">
-            <h6 class="link-secondary text-center"><a href="{% static 'docs/privacy_policy.pdf' %}" class="link-secondary me-2">Политика конфиденциальности</a><a href="#" class="link-secondary">Пользовательское соглашение</a></h6>
+            <h6 class="link-secondary text-center"><a href="{% static 'docs/privacy_policy.pdf' %}" class="link-secondary me-2">Политика конфиденциальности</a></h6>
             <h6 class="link-secondary text-center">© Devman 2022. All right reserved.</h6>
         </div>
     </footer>
